--- a/style.css
+++ b/style.css
@@ -359,6 +359,7 @@ footer {
     list-style: none;
     padding-left: 0;
     margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 .about-container1 ul li {
