--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ footer {
     border: 1px solid #E7C065;
     border-radius: 4px;
     background: #222222;
-    color: white;
+    color: #FAFAFA;
 }
 
 .form-group input:focus,
