--- a/style.css
+++ b/style.css
@@ -1106,7 +1106,6 @@ footer {
 }
 
 .terms-section {
-    margin-bottom: 30px;
     padding: 20px;
     border-radius: 10px;
 }
@@ -1116,7 +1115,8 @@ footer {
     color: #E7C065;
     border-bottom: 2px solid #E7C065;
     padding-bottom: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 15px;
 }
 
 .terms-section p {
@@ -1227,12 +1227,6 @@ footer {
     box-shadow: 0 6px 30px rgba(231, 192, 101, 0.2);
 }
 
-.effective-date {
-    text-align: center;
-    font-size: 1.1rem;
-    margin-bottom: 1.5rem;
-}
-
 .privacy-policy-list {
     list-style-type: decimal;
     margin-left: 2rem;
@@ -1240,7 +1234,7 @@ footer {
 }
 
 .privacy-policy-list li {
-    margin-bottom: 1.2rem;
+    margin-bottom: 20px;
 }
 
 .privacy-policy-list ul {
@@ -1256,16 +1250,81 @@ footer {
 .privacy-policy-container p {
     font-size: 1.1rem;
     line-height: 1.6;
-    margin-bottom: 1.5rem;
+    margin-bottom: 10px;
 }
 
 .privacy-policy-section-title {
     font-size: 1.3rem;
     font-weight: bold;
-    margin-bottom: 1.5rem; /* Adds space below each title */
+    margin-bottom: 20px; /* Adds space below each title */
     border-bottom: 2px solid #E7C065;
     padding-bottom: 10px;
+    margin-top: 40px;
 }
+
+.header-handbook {
+    background-color: #121212;
+    color: #E7C065;
+    text-align: center;
+    padding: 20px;
+}
+
+.title-handbook {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.updated {
+    margin-top: 15px;
+    font-size: 1.1rem;
+    font-style: italic;
+    color: #E7C065;
+}
+
+.content-handbook {
+    max-width: 90%;
+    margin: 40px auto;
+    background-color: #121212; /* Dark background */
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(231, 192, 101, 0.3); /* Gold glow */
+}
+
+.section-handbook {
+    margin-bottom: 30px;
+}
+
+.sub-title-handbook {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 15px;
+    color: #E7C065;
+}
+
+.text-handbook {
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+
+.company-info {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #E7C065;
+    margin-top: 5px;
+}
+
+.contacts-link {
+    color: #E7C065;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.contacts-link:hover {
+    text-decoration: underline;
+    color: #c9a14a; /* Brighter gold on hover */
+}
+
+
 
 
 
